Last update: dimanche, 24/03/19
# Date: dimanche, 24/03/19
Adding: resolver class for semantic analyer

#--------------------------------------------------------------------------------

# Date: samedi, 23/03/19
Adding: closure function.
Operators: +unary operator, +=, -=, *=, /=, %= 
and compoundAssignment function.

#--------------------------------------------------------------------------------

# Date: vendredi, 22/03/19
Adding: println native function, improve break and continue statement
Functions: visitBreak, breakStatement, printResult, 
Classes: Break, Println

#--------------------------------------------------------------------------------